--- a/tttweb/templates/base.html
+++ b/tttweb/templates/base.html
@@ -148,11 +148,11 @@
             
             </ul>
         </div>
-        <div class="header" style="display:inline-flex;">
+        <div class="header">
 
         <div style = "display:block;height:8em">
         <img src = "{% static 'ttt420.png' %}" 
-style = "height:calc(100% - 0.5em);margin-top:0.25em;"/>
+            style = "height:calc(100% - 0.5em);margin-top:0.25em;"/>
         </div>
         <div>
         <h1><a href = "{% page_url "home" %}">TechTech Technologies</a></h1>
