--- a/tttweb/templates/base.html
+++ b/tttweb/templates/base.html
@@ -112,6 +112,20 @@
             background-color: black;
         }
 
+        /* This might not be wise... */
+        .container h6,
+        .container h5, 
+        .container h4,
+        .container h3,
+        .container h2,
+        .container h1:first-child {
+            margin-top: 0.25em;
+            }
+
+
+
+
+
         body {
             margin: 0px;
         }
