--- a/tttweb/templates/base.html
+++ b/tttweb/templates/base.html
@@ -11,6 +11,12 @@
             src: url({% static 'cmunrm.otf' %}) format('opentype');
         }
 
+        .nicetable{
+            word-wrap: normal;
+            border: 1px solid black;
+            border-collapse: collapse;
+        }
+
         p {
             margin-top: 0.5em;
             margin-bottom: 0.5em;
