Updated to render repo attachments more better

--- a/patches/static/patches/style.css
+++ b/patches/static/patches/style.css
@@ -11,6 +11,14 @@ li > p {
     margin-bottom: 0;
 }
 
+/* Tables */
+
+td, th {
+    border: 1px solid black;
+    padding-left: 4px;
+    padding-right: 4px
+}
+
 /* Message styling */
 
 .message-success {
