--- a/patches/static/patches/style.css
+++ b/patches/static/patches/style.css
@@ -192,6 +192,8 @@ border-right: 1px solid black;
 .author-info {
 	padding-left: 15px;
 	padding-bottom: 15px;
+    padding-top: 15px;
+    border-top: 1px solid black;
 }
 .home-link {
 	color:inherit;
