Limit image widths to 100% inside main content

--- a/tttweb/templates/base.html
+++ b/tttweb/templates/base.html
@@ -95,7 +95,7 @@
             margin-bottom: 0px;
             font-size: 72px;
             font-weight: normal;
-     height: 1.5em;
+            height: 1.5em;
         }
         .header h2 {
             margin-top: 0px;
@@ -128,7 +128,10 @@
             margin-top: 0.25em;
             }
 
+        .container img{
+            max-width:100%;
 
+        }
 
 
 
